--- a/timeline.html
+++ b/timeline.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Timeline</title>
     <style>
         /* Variables */
 /* Fonts */
@@ -14,8 +14,7 @@ body {
   font-weight: 300;
   line-height: 1.5;
   letter-spacing: 0.05em;
-  background: url("img/red.svg") no-repeat center center fixed;
-  background-size: cover;
+  background-color: whitesmoke;
 }
 
 
