--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <title>MOONPLAY</title>
   <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600' rel='stylesheet' type='text/css'>
+  <link rel="icon" href="/img/logo4.png">
   <link rel="stylesheet" href="./style.css">
+
 </head>
 <body>
 <!--LOADER-->
@@ -27,6 +29,7 @@
       <!-- First line with three boxes -->
       <div class='items'>
         <div class='item'>
+        <a href="game.html">
           <svg preserveAspectRatio='xMidYMid slice' viewBox='0 0 300 200'>
             <defs>
               <clipPath id='clip-0'>
@@ -43,6 +46,7 @@
               </text>
             </g>
           </svg>
+        </a>
         </div>
         <div class='item'>
           <svg preserveAspectRatio='xMidYMid slice' viewBox='0 0 300 200'>
@@ -83,7 +87,7 @@
       </div>
       <!-- Second line with two boxes -->
       <div class='items'>
-        <div class='item'>
+        <div class='item'>         
           <svg preserveAspectRatio='xMidYMid slice' viewBox='0 0 300 200'>
             <defs>
               <clipPath id='clip-3'>
