--- a/snake/index.html
+++ b/snake/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snake game </title>
     <link rel = "stylesheet" href = "styles.css">
+    <link rel="icon" href="/img/logo4.png">
     <script src="script.js"></script> 
 </head>
 <body>
     <h1>Snake Game</h1>
+    <h3 class = "score-count">Score count : 0</h3>
     <div class="game-frame">
         <div class="player"></div>
     </div>
