--- a/game.html
+++ b/game.html
@@ -471,6 +471,8 @@ button svg {
       <nav data-magnetic>
         <ul>
           <li><a href="/snake/index.html" id="home">Snake</a></li>
+          <li><a href="/Kims/index.html" id="home">Kims</a></li>
+
 
         </ul>
       </nav>
