--- a/index.html
+++ b/index.html
@@ -67,22 +67,24 @@
             </svg>
           </div>
           <div class='item'>
-            <svg preserveAspectRatio='xMidYMid slice' viewBox='0 0 300 200'>
-              <defs>
-                <clipPath id='clip-2'>
-                  <circle cx='0' cy='0' fill='#000' r='150px'></circle>
-                </clipPath>
-              </defs>
-              <text class='svg-text' dy='.3em' x='50%' y='50%'>
-                ALGORITHM
-              </text>
-              <g clip-path='url(#clip-2)'>
-                <image height='100%' preserveAspectRatio='xMinYMin slice' width='100%' xlink:href='https://cdn.pixabay.com/photo/2022/01/17/13/49/blueprint-6944719_1280.jpg'></image>
-                <text class='svg-masked-text' dy='.3em' x='50%' y='50%'>
+            <a href="algo.html">
+              <svg preserveAspectRatio='xMidYMid slice' viewBox='0 0 300 200'>
+                <defs>
+                  <clipPath id='clip-2'>
+                    <circle cx='0' cy='0' fill='#000' r='150px'></circle>
+                  </clipPath>
+                </defs>
+                <text class='svg-text' dy='.3em' x='50%' y='50%'>
                   ALGORITHM
                 </text>
-              </g>
-            </svg>
+                <g clip-path='url(#clip-2)'>
+                  <image height='100%' preserveAspectRatio='xMinYMin slice' width='100%' xlink:href='https://cdn.pixabay.com/photo/2022/01/17/13/49/blueprint-6944719_1280.jpg'></image>
+                  <text class='svg-masked-text' dy='.3em' x='50%' y='50%'>
+                    ALGORITHM
+                  </text>
+                </g>
+              </svg>
+            </a>
           </div>
         </div>
         <!-- Second line with two boxes -->
