--- a/index.html
+++ b/index.html
@@ -49,79 +49,87 @@
             </a>
           </div>
           <div class='item'>
-            <svg preserveAspectRatio='xMidYMid slice' viewBox='0 0 300 200'>
-              <defs>
-                <clipPath id='clip-1'>
-                  <circle cx='0' cy='0' fill='#000' r='150px'></circle>
-                </clipPath>
-              </defs>
-              <text class='svg-text' dy='.3em' x='50%' y='50%'>
-                AI
-              </text>
-              <g clip-path='url(#clip-1)'>
-                <image height='100%' preserveAspectRatio='xMinYMin slice' width='100%' xlink:href='https://cdn.pixabay.com/photo/2023/02/08/21/46/futuristic-7777561_1280.jpg'></image>
-                <text class='svg-masked-text' dy='.3em' x='50%' y='50%'>
+            <a href="error.html">
+              <svg preserveAspectRatio='xMidYMid slice' viewBox='0 0 300 200'>
+                <defs>
+                  <clipPath id='clip-1'>
+                    <circle cx='0' cy='0' fill='#000' r='150px'></circle>
+                  </clipPath>
+                </defs>
+                <text class='svg-text' dy='.3em' x='50%' y='50%'>
                   AI
                 </text>
-              </g>
-            </svg>
+                <g clip-path='url(#clip-1)'>
+                  <image height='100%' preserveAspectRatio='xMinYMin slice' width='100%' xlink:href='https://cdn.pixabay.com/photo/2023/02/08/21/46/futuristic-7777561_1280.jpg'></image>
+                  <text class='svg-masked-text' dy='.3em' x='50%' y='50%'>
+                    AI
+                  </text>
+                </g>
+              </svg>
+            </a>
           </div>
           <div class='item'>
-            <svg preserveAspectRatio='xMidYMid slice' viewBox='0 0 300 200'>
-              <defs>
-                <clipPath id='clip-2'>
-                  <circle cx='0' cy='0' fill='#000' r='150px'></circle>
-                </clipPath>
-              </defs>
-              <text class='svg-text' dy='.3em' x='50%' y='50%'>
-                ALGORITHM
-              </text>
-              <g clip-path='url(#clip-2)'>
-                <image height='100%' preserveAspectRatio='xMinYMin slice' width='100%' xlink:href='https://cdn.pixabay.com/photo/2022/01/17/13/49/blueprint-6944719_1280.jpg'></image>
-                <text class='svg-masked-text' dy='.3em' x='50%' y='50%'>
+            <a href="algo.html">
+              <svg preserveAspectRatio='xMidYMid slice' viewBox='0 0 300 200'>
+                <defs>
+                  <clipPath id='clip-2'>
+                    <circle cx='0' cy='0' fill='#000' r='150px'></circle>
+                  </clipPath>
+                </defs>
+                <text class='svg-text' dy='.3em' x='50%' y='50%'>
                   ALGORITHM
                 </text>
-              </g>
-            </svg>
+                <g clip-path='url(#clip-2)'>
+                  <image height='100%' preserveAspectRatio='xMinYMin slice' width='100%' xlink:href='https://cdn.pixabay.com/photo/2022/01/17/13/49/blueprint-6944719_1280.jpg'></image>
+                  <text class='svg-masked-text' dy='.3em' x='50%' y='50%'>
+                    ALGORITHM
+                  </text>
+                </g>
+              </svg>
+            </a>
           </div>
         </div>
         <!-- Second line with two boxes -->
         <div class='items'>
           <div class='item'>         
-            <svg preserveAspectRatio='xMidYMid slice' viewBox='0 0 300 200'>
-              <defs>
-                <clipPath id='clip-3'>
-                  <circle cx='0' cy='0' fill='#000' r='150px'></circle>
-                </clipPath>
-              </defs>
-              <text class='svg-text' dy='.3em' x='50%' y='50%'>
-                GAME-AI
-              </text>
-              <g clip-path='url(#clip-3)'>
-                <image height='100%' preserveAspectRatio='xMinYMin slice' width='100%' xlink:href='https://cdn.pixabay.com/photo/2024/04/09/16/30/ai-generated-8686301_1280.jpg'></image>
-                <text class='svg-masked-text' dy='.3em' x='50%' y='50%'>
+            <a href="error.html">
+              <svg preserveAspectRatio='xMidYMid slice' viewBox='0 0 300 200'>
+                <defs>
+                  <clipPath id='clip-3'>
+                    <circle cx='0' cy='0' fill='#000' r='150px'></circle>
+                  </clipPath>
+                </defs>
+                <text class='svg-text' dy='.3em' x='50%' y='50%'>
                   GAME-AI
                 </text>
-              </g>
-            </svg>
+                <g clip-path='url(#clip-3)'>
+                  <image height='100%' preserveAspectRatio='xMinYMin slice' width='100%' xlink:href='https://cdn.pixabay.com/photo/2024/04/09/16/30/ai-generated-8686301_1280.jpg'></image>
+                  <text class='svg-masked-text' dy='.3em' x='50%' y='50%'>
+                    GAME-AI
+                  </text>
+                </g>
+              </svg>
+            </a>
           </div>
           <div class='item'>
-            <svg preserveAspectRatio='xMidYMid slice' viewBox='0 0 300 200'>
-              <defs>
-                <clipPath id='clip-4'>
-                  <circle cx='0' cy='0' fill='#000' r='150px'></circle>
-                </clipPath>
-              </defs>
-              <text class='svg-text' dy='.3em' x='50%' y='50%'>
-                DATA VISUALIZATION
-              </text>
-              <g clip-path='url(#clip-4)'>
-                <image height='100%' preserveAspectRatio='xMinYMin slice' width='100%' xlink:href='https://cdn.pixabay.com/photo/2017/09/06/21/31/data-2723105_1280.jpg'></image>
-                <text class='svg-masked-text' dy='.3em' x='50%' y='50%'>
+            <a href="error.html">
+              <svg preserveAspectRatio='xMidYMid slice' viewBox='0 0 300 200'>
+                <defs>
+                  <clipPath id='clip-4'>
+                    <circle cx='0' cy='0' fill='#000' r='150px'></circle>
+                  </clipPath>
+                </defs>
+                <text class='svg-text' dy='.3em' x='50%' y='50%'>
                   DATA VISUALIZATION
                 </text>
-              </g>
-            </svg>
+                <g clip-path='url(#clip-4)'>
+                  <image height='100%' preserveAspectRatio='xMinYMin slice' width='100%' xlink:href='https://cdn.pixabay.com/photo/2017/09/06/21/31/data-2723105_1280.jpg'></image>
+                  <text class='svg-masked-text' dy='.3em' x='50%' y='50%'>
+                    DATA VISUALIZATION
+                  </text>
+                </g>
+              </svg>
+            </a>
           </div>
         </div>
       </main>
