--- a/timeline.html
+++ b/timeline.html
@@ -136,6 +136,15 @@
       <p>Kims is number remebering game.</p>
     </div>
   </li>
+  <li class="timeline-event">
+    <label class="timeline-event-icon"></label>
+    <div class="timeline-event-copy">
+      <p class="timeline-event-thumbnail">30-july-2024</p>
+      <h1>Line & error</h1>
+      <h4>Added Line and Error page</h4>
+      <p>Line is Dynamic rotating bezier curves generated interactively with random parameters.</p>
+    </div>
+  </li>
 </ul>
 </body>
 </html>
