lorenz timeline.html

--- a/timeline.html
+++ b/timeline.html
@@ -130,19 +130,30 @@
   <li class="timeline-event">
     <label class="timeline-event-icon"></label>
     <div class="timeline-event-copy">
-      <p class="timeline-event-thumbnail">29-july-2024</p>
+      <p class="timeline-event-thumbnail">29-July-2024</p>
       <h1>Kims</h1>
-      <h4>Adding one more game in game section</h4>
-      <p>Kims is number remebering game.</p>
+      <h4>Adding One More Game in Game Section</h4>
+      <p>Kims is a number remembering game designed to challenge and enhance memory skills. Players are presented with a series of numbers that they must remember and recall in the correct order. The game includes various levels of difficulty, with increasing complexity as the player progresses. New features include a timed mode, score tracking, and interactive feedback to improve player engagement and performance.</p>
     </div>
   </li>
+
   <li class="timeline-event">
     <label class="timeline-event-icon"></label>
     <div class="timeline-event-copy">
-      <p class="timeline-event-thumbnail">30-july-2024</p>
-      <h1>Line & error</h1>
-      <h4>Added Line and Error page</h4>
-      <p>Line is Dynamic rotating bezier curves generated interactively with random parameters.</p>
+      <p class="timeline-event-thumbnail">30-July-2024</p>
+      <h1>Line & Error</h1>
+      <h4>Added Line and Error Page</h4>
+      <p>The Line visualization features dynamic rotating Bezier curves generated interactively with random parameters. Users can engage with the curves by adjusting settings to observe how the shapes evolve. This interactive tool also includes an error tracking component to analyze and visualize deviations and inaccuracies. The page now provides real-time feedback and a range of customization options to enhance the user experience and understanding of the underlying mathematical concepts.</p>
+    </div>
+  </li>
+
+  <li class="timeline-event">
+    <label class="timeline-event-icon"></label>
+    <div class="timeline-event-copy">
+      <p class="timeline-event-thumbnail">2-August-2024</p>
+      <h1>Lorenz Attractor Visualization</h1>
+      <h4>Interactive Lorenz Attractor</h4>
+      <p>The Lorenz attractor visualization features a dynamic display of chaotic behavior. Users can interact with the canvas to adjust initial conditions, resulting in a stunning visual representation of the system's complex dynamics. The visualization updates in real-time based on user input and random variations, showcasing the beauty of chaotic systems.</p>
     </div>
   </li>
 </ul>
