--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </a>
           </div>
           <div class='item'>
-            <a href="algo.html">
+            <a href="error.html">
               <svg preserveAspectRatio='xMidYMid slice' viewBox='0 0 300 200'>
                 <defs>
                   <clipPath id='clip-2'>
@@ -112,7 +112,7 @@
             </a>
           </div>
           <div class='item'>
-            <a href="error.html">
+            <a href="data.html">
               <svg preserveAspectRatio='xMidYMid slice' viewBox='0 0 300 200'>
                 <defs>
                   <clipPath id='clip-4'>
