--- a/Lorens_attractor/index.html
+++ b/Lorens_attractor/index.html
@@ -24,7 +24,7 @@
             </p>
             <p>
                 Lorenz’s discovery, which introduced the concept of Lorenz attractors, showed that precise long-term weather predictions are generally impossible, even with detailed atmospheric models. His work demonstrated that small changes in initial conditions can lead to drastically different outcomes, highlighting the inherent uncertainty in long-term forecasting.            </p>
-            <img src="./Screenshot 1946-05-11 at 6.16.25 PM.png" alt="Edward_lorenz">
+            <img src="./equation.png" alt="Edward_lorenz">
             <p>
                 The equations relate the properties of a two-dimensional fluid layer uniformly warmed from below and cooled from above. In particular, the equations describe the rate of change of three quantities with respect to time: x is proportional to the rate of convection, y to the horizontal temperature variation, and z to the vertical temperature variation.[3] The constants σ, ρ, and β are system parameters proportional to the Prandtl number, Rayleigh number, and certain physical dimensions of the layer itself.[3]
             </p>
