--- a/timeline.html
+++ b/timeline.html
@@ -156,6 +156,17 @@
       <p>The Lorenz attractor visualization features a dynamic display of chaotic behavior. Users can interact with the canvas to adjust initial conditions, resulting in a stunning visual representation of the system's complex dynamics. The visualization updates in real-time based on user input and random variations, showcasing the beauty of chaotic systems.</p>
     </div>
   </li>
+
+  <li class="timeline-event">
+    <label class="timeline-event-icon"></label>
+    <div class="timeline-event-copy">
+      <p class="timeline-event-thumbnail">5-August-2024</p>
+      <h1>Aizawa Attractor Visualization</h1>
+      <h4>Interactive Aizawa Attractor</h4>
+      <p>The Aizawa attractor visualization presents a captivating exploration of chaotic dynamics. This interactive display allows users to manipulate the parameters and observe the resulting intricate patterns in real-time. The visualization features a dynamic and evolving representation of the Aizawa system, showcasing its complex and beautiful behavior through an engaging and interactive experience.</p>
+    </div>
+  </li>
+
 </ul>
 </body>
 </html>
