--- a/snake/index.html
+++ b/snake/index.html
@@ -9,10 +9,11 @@
     <script src="script.js"></script> 
 </head>
 <body>
-    <h1>Snake Game</h1>
-    <h3 class = "score-count">Score count : 0</h3>
-    <div class="game-frame">
-        <div class="player"></div>
+    <div class="ocean">
+        <div class="wave"></div>
+        <div class="wave"></div>
     </div>
+    <h1>       Snake Game</h1>
+    <canvas id="stage" height="600" width="900"></canvas>
 </body>
 </html>
