rock paper Update timeline.html

--- a/timeline.html
+++ b/timeline.html
@@ -167,6 +167,16 @@
     </div>
   </li>
 
+  <li class="timeline-event">
+    <label class="timeline-event-icon"></label>
+    <div class="timeline-event-copy">
+      <p class="timeline-event-thumbnail">7-Sep-2024</p>
+      <h1>Rock Paper Scissors</h1>
+      <h4>Simple childhood game </h4>
+      <p>Simple game where you play Rock Paper Scissors against computer.</p>
+    </div>
+  </li>
+
 </ul>
 </body>
 </html>
