--- a/game.html
+++ b/game.html
@@ -472,8 +472,7 @@ button svg {
         <ul>
           <li><a href="/snake/index.html" id="home">Snake</a></li>
           <li><a href="/Kims/index.html" id="home">Kims</a></li>
-
-
+          <li><a href="/rock_paper_scissors/index.html" id="home">Rock paper</a></li>
         </ul>
       </nav>
       <button class="theme" aria-pressed="true">
