--- a/timeline.html
+++ b/timeline.html
@@ -177,6 +177,15 @@
     </div>
   </li>
 
+  <li class="timeline-event"></li>
+    <label class="timeline-event-icon"></label>
+    <div class="timeline-event-copy">
+      <p class="timeline-event-thumbnail">15-Sep-2024</p>
+      <h1>frontend redesign</h1>
+      <h4>enjoy the new look</h4>
+      <p>got some inspiration for changing the whole look so did extactly that on weekend.</p>
+    </div>
+  </li>
 </ul>
 </body>
 </html>
